--- a/templates/register.twig
+++ b/templates/register.twig
@@ -15,7 +15,7 @@
 </div>
   <form method="post" name="loginForm" id="loginForm" action="login.php">
 	<div class="text-center">
-    <img class="mb-2 gamerappa-killed-the-render-star" src="/assets/logo-wordmark.png" alt="squareBracket">
+    <img class="mb-2 gamerappa-killed-the-render-star" src="/assets/logo-wordmark{% if theme == 'dark' %}-dark{% endif %}.png" alt="squareBracket">
 	</div>
 <h2>Register</h2>
 <form method="POST">
