--- a/templates/settings.twig
+++ b/templates/settings.twig
@@ -7,8 +7,8 @@
 	<div class="col-2">
 	<ul class="list-group">
   <li class="list-group-item"><img src="{{ profile_image(current_user.username) }}" alt="{{ current_user.username }}" class="rounded" width="40" height="40"> {{ current_user.username }}</li>
-  <li class="list-group-item">Profile settings</li>
-  <li class="list-group-item">Partnership</li>
+  <li class="list-group-item">{{ __("Profile settings") }}</li>
+  <li class="list-group-item">{{ __("Partnership") }}</li>
 </ul>
 	</div>
 	<div class="col-10">
@@ -27,7 +27,7 @@
 			<textarea class="form-control" id="description" id="floatingInput" name="description" maxlength="500" style="overflow:hidden;resize:none" rows="3" placeholder="{{ __("Description") }}">{{ current_user.description }}</textarea>
 			<select class="form-select" name="language">
 				{% for code,name in glob_languages %}
-					<option value="{{ code }}" {% if code == current_user.language %}selected{% endif %}>{{ name }}</option>
+					{% if name %}<option value="{{ code }}" {% if code == current_user.language %}selected{% endif %}>{{ name }}</option>{% endif %}
 				{% endfor %}
 			</select>
 			<input type="color" class="form-control" id="color" name="color" value="{{ current_user.color }}">
