--- a/templates/_layout-login.twig
+++ b/templates/_layout-login.twig
@@ -5,11 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		{% block head %}{% endblock %}
-		{% if theme != 'vanilla' %}
-		<link rel="stylesheet" id="bootstrap" href="assets/bs{% if theme == 'dark' %}-dark{% endif %}.css" type="text/css">
-		{% else %}
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-		{% endif %}
 		<!-- jquery and bootstrap 5 javascript
 		(IMPORTANT: even though bootstrap 5 claims to no longer support jquery
 		we still need it for the settings dropdown menu)
@@ -37,6 +33,7 @@ display: flex;
 align-items: center;
 padding-top: 40px;
 padding-bottom: 40px;
+background-color: #f5f5f5;
 }
 .form-signin {
     width: 100%;
