add poktube thing on login screen

--- a/templates/login.twig
+++ b/templates/login.twig
@@ -22,6 +22,17 @@
 	</div>
 	<div class="form-signin god-is-dead text-center">
     <h1 class="h3 mb-3 fw-normal">{{ __("Please sign in") }}</h1>
+	
+	<div class="alert alert-primary" role="alert">
+		<div class="row">
+		<div class="col-3">
+		<img class="img-fluid" src="/assets/poktube.png" alt="PokTube">
+		</div>
+		<div class="col-9">
+		  {{ __("Had an account on PokTube? You can now log into squareBracket using your PokTube credentials.") }}
+		</div>
+		</div>
+	</div>
 
     <div class="form-floating">
       <input type="text" name="username" class="form-control" id="floatingUsername" placeholder="name@example.com">
