--- a/templates/settings.twig
+++ b/templates/settings.twig
@@ -4,22 +4,22 @@
 
 	{% block content %}
 	<div class="row">
-	<div class="col-2">
+	<div class="col-lg-2 col-4">
 	<ul class="list-group">
   <li class="list-group-item"><img src="{{ profile_image(current_user.username) }}" alt="{{ current_user.username }}" class="rounded" width="40" height="40"> {{ current_user.username }}</li>
-  <li class="list-group-item">{{ __("Profile settings") }}</li>
-  <li class="list-group-item">{{ __("Partnership") }}</li>
+  <a href="settings.php" class="list-group-item list-group-item-action active">{{ __("Profile settings") }}</a>
+  <a href="partnership.php" class="list-group-item list-group-item-action">{{ __("Partnership") }}</a>
 </ul>
 	</div>
-	<div class="col-10">
+	<div class="col-lg-10 col-8">
 	<div class="p-4 bg-light border rounded-3">
 		  <div class="row">
-		  <div class="col-1">
-          <img class="img-fluid" src="/assets/settings.png" alt="{{ __("Settings") }}">
+		  <div class="col-lg-1 col-3">
+          <img class="img-fluid" src="/assets/tweakutility.svg" alt="{{ __("Settings") }}">
 		  </div>
-		  <div class="col-11">
+		  <div class="col-lg-11 col-9">
           <h2>{{ __("Profile settings") }}</h2>
-          {{ __("Change the appearance of your profile.") }}
+          {{ __("Change the appearance of your profile.") }} (please add pfp and partner-only background changing for fuck sakes)
 		  </div>
         </div></div>
 		<br>
@@ -34,4 +34,5 @@
 			<input type="hidden" name="updatesettings" value="yes">
 			<input type="submit" class="btn btn-primary" name="action" value="{{ __("Update") }}">
 		</form>
+	</div>
 	{% endblock %}
