--- a/templates/index.twig
+++ b/templates/index.twig
@@ -4,7 +4,13 @@
 	{% block content %}
 <div class="row">
 	<div class="col-xl-8">
+			<div class="row">
+			<div class="col-8">
 			<h3>{{ __("New from squareBracket") }} <small>(Alpha 3)</small></h3>
+			</div><div class="col-4">
+			<div class="text-end"><a href="browse.php" class="btn btn-secondary btn-sm">More videos</a></div>
+			</div>
+			</div>
 				{% for video in videos %}
 					{{ video_box(video) }}
 				{% else %}
