--- a/templates/browse.twig
+++ b/templates/browse.twig
@@ -5,8 +5,7 @@
 	{% block content %}
 <div class="row">
 	<div class="col">
-		<div class="card">
-			<div class="card-header bg-dark text-white">{{ __("Videos") }}</div>
+			<h3>{{ __("Videos") }}</h3>
 			<div class="card-body">
 				{% for video in videos|batch(4) %}
 				<div class="row">
@@ -56,7 +55,6 @@
 					{% endif %}
 				{% endmacro %}
 				{{ _self.pagination(pageCount,currentPage, url) }}
-			</div>
 		</div>
 	</div>
 </div>
