--- a/templates/user.twig
+++ b/templates/user.twig
@@ -29,14 +29,14 @@
 		<div class="container-fluid py-4">
 			<div class="row">
 			<div class="col-11">
-					<img class="float-start" src="{{ profile_image(user.username) }}" style="margin-right: 1.5%;" width="128" alt="pfp"><h1 class="align-top fw-bold">
+					<img class="float-start rounded" src="{{ profile_image(user.username) }}" style="margin-right: 1.5%;" width="128" alt="pfp"><h1 class="align-top fw-bold">
 					{{ user.username }}{% if user.u_flags == 1 %}<svg data-bs-toggle="tooltip" data-bs-placement="top" title="{{ __("squareBracket Partner") }}" style="margin-left: 0.75%;" class="bi" width="32" height="32" fill="currentColor">
 							<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#patch-check-fill"/>
 						</svg>{% endif %}</h1>
 					<p class="fs-4">{{ user.description }}</p>
 			</div>
 			<div class="col-1 text-end">
-					<button class="btn btn-warning" type="button"><svg data-bs-toggle="tooltip" data-bs-placement="top" title="{{ __("Subscribe") }}" style="margin-left: 0.75%;" class="bi" width="32" height="32" fill="currentColor">
+					<button class="btn btn-warning" type="button" disabled><svg data-bs-toggle="tooltip" data-bs-placement="top" title="{{ __("Subscribe") }}" style="margin-left: 0.75%;" class="bi" width="32" height="32" fill="currentColor">
 							<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#plus"/>
 						</svg></button>
 			</div>
