remove poktube code and assets
admin page is still incomplete...

--- a/templates/admin.twig
+++ b/templates/admin.twig
@@ -1,121 +1,11 @@
-<html><head>
-<link rel="stylesheet" href="/assets/admin_placeholder/styles.css" type="text/css">
-<link rel="stylesheet" href="/assets/admin_placeholder/base_all-vfl70436.css" type="text/css">
-<link rel="icon" href="favicon.ico" type="image/x-icon">
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-<style>
-body {
-  background-color: #FA;
-}
-</style>
-<meta name="theme-color" content="#f28900">
-<meta name="description" content="Share your videos with friends and family">
-<meta property="og:image" content="/img/icon.png">
-<meta name="keywords" content="video,sharing,camera phone,video phone">
-</head>
-<body><table class="vibriwentuwu" id="dadminpanel" style="padding: 5px 0px 0px 0px;" width="100%" cellspacing="0" cellpadding="0" border="0" bgcolor="#0049C7">
-	<tbody><tr valign="top">
-		<td rowspan="2" style="padding: 0px 5px 5px 5px;" width="130"><a href="index.php"><img src="/assets/admin_placeholder/logo.png" alt="squareBracket" border="0"></a></td>
-	</tr>
+{% extends "_layout.twig" %}
 
-		<tr>
-		<td width="100%">
-		
-		<div id="needsToBeBlack" style="font-size: 12px; font-weight: bold; float: right; padding: 1px 5px 0px 5px;">{{ "now"|date("l jS F Y h:i:s A") }} <!--&nbsp;//&nbsp; <a href="browse.php">Browse</a>--></div>
-		
-		</td>
-	</tr>
+{% block title %}{{ __("Browse") }}{% endblock %}
 
-			
-</tbody></table>
-<table class="header2" id="dadminpanel" style="margin: 0px 0px 10px 0px;" width="100%" cellspacing="0" cellpadding="0" border="0" bgcolor="#3C3C3C" align="center">
-	<tbody><tr>
-		<td><img src="img/pixel.gif" width="1" height="5"></td>
-	</tr>
-	<tr>
-		<td><img src="img/pixel.gif" width="5" height="1"></td>
-		
-		<td width="100%">
-
-		<table width="100%" cellspacing="0" cellpadding="0" border="0">
-				<tbody><tr>
-					<td>
-											<table cellspacing="0" cellpadding="2" border="0">
-						<tbody><tr>
-							<td>&nbsp;<span class="headertext">Administrator Panel</span></td>
-						</tr>
-						</tbody></table>
-					</td>
-				</tr>
-			</tbody></table>
-			
-			</td>
-	
-		<td><img src="img/pixel.gif" width="5" height="1"></td>
-	</tr>
-	<tr>
-		<td><img src="img/pixel.gif" width="1" height="5"></td>
-	</tr>
-</tbody></table>
-<div id="baseDiv" class="date-20090101 video-info">
-<div id="masthead">	<h1>Welcome, {{ current_user.username }}</h1>
-	<h2>Videos</h2>
-	<h3>Approved</h3>
-<!-- begin recently featured -->
-					<table class="roundedTable" width="auto" cellspacing="0" cellpadding="0" border="0" bgcolor="#cccccc" align="center">
-			<tbody><tr>
-				<td><img src="img/box_login_tl.gif" width="5" height="5"></td>
-				<td width="100%"><img src="img/pixel.gif" width="1" height="5"></td>
-				<td><img src="img/box_login_tr.gif" width="5" height="5"></td>
-			</tr>
-			<tr>
-				<td><img src="img/pixel.gif" width="5" height="1"></td>
-				<td width="585">
-					<div class="sunkenTitleBar">
-						<div class="moduleTitle">
-							<span style="color:#444;">Approved Videos</span>
-						</div>
-					</div>
-					<div class="list-view">
-										
-{% for video in videos %}
-	<div class="moduleEntry">
-<div class="video-entry" style="padding: 0;">
-   <div class="v120WideEntry">
-      <div class="v120WrapperOuter">
-         <div class="v120WrapperInner">
-            <a id="video-url-muP9eH2p2PI" href="watch.php?v=QHy0XcM9BVE" rel="nofollow"><img title="Another Test" src="{{ video_thumbnail(video.video_id) }}" onerror="this.src='img/default.png'" class="vimg120" qlicon="muP9eH2p2PI" alt="Another Test"></a>
-         <div class="video-time"><span id="video-run-time-muP9eH2p2PI">{{ video.videolength }}</span></div>
-		 </div>
-      </div>
-   </div>
-   <div class="video-main-content" id="video-main-content-muP9eH2p2PI">
-      <div class="video-title ">
-         <div class="video-long-title">
-            <a id="video-long-title-muP9eH2p2PI" href="watch.php?v=QHy0XcM9BVE&amp;player=0" title="Another Test" rel="nofollow">{{ video.title }}</a>
-         </div>
-      </div>
-      <div id="video-description-muP9eH2p2PI" class="video-description">
-         {{ video.description }}
-      </div>
-      <div class="video-facets">
-         Uploaded on {{ video.time }} by: <span class="video-username"><a id="video-from-username-muP9eH2p2PI" class="hLink" href="profile.php?user=konqi">{{ video.author }}</a></span>
-      </div>
-	   <div class="video-facets">
-         <a href="unapprove.php?v=QHy0XcM9BVE">unapprove</a>
-      </div>
-   </div>
-   <div class="video-clear-list-left"></div>
-</div>
-</div>
-{% endfor %}		</div></td>
-				<td><img src="img/pixel.gif" width="5" height="1"></td>
-			</tr>
-			<tr>
-				<td><img src="img/box_login_bl.gif" width="5" height="5"></td>
-				<td><img src="img/pixel.gif" width="1" height="5"></td>
-				<td><img src="img/box_login_br.gif" width="5" height="5"></td>
-			</tr>
-		</tbody></table>
-			<!-- end recently featured -->
-</body></html>
+	{% block content %}
+		<h2>Videos</h2>
+		<h3>Approved</h3>
+		{% for video in videos %}
+			{{ video_box(video) }}
+		{% endfor %}
+	{% endblock %}
