--- a/templates/watch.twig
+++ b/templates/watch.twig
@@ -121,12 +121,12 @@
 		</div> <!-- WATCH VIDEO BOX -->
 		<div style="margin-top:5px">
 			<textarea class="form-control" id="commentContents" style="overflow:hidden;resize:none"
-			rows="3" placeholder="{{ __("Enter comment here, Markdown can be used here.") }}"></textarea>
-			<div class="d-grid gap-2 d-md-flex justify-content-md-end" style="margin-top:5px;margin-bottom:15px">
+			rows="3" placeholder="{% if logged_in %}{{ __("Enter comment here, Markdown can be used here.") }}{% else %}{{ __("Please sign in in order to comment.") }}{% endif %}"></textarea>
+			{% if logged_in %}<div class="d-grid gap-2 d-md-flex justify-content-md-end" style="margin-top:5px;margin-bottom:15px">
 			<button id="{% if logged_in %}post{% endif %}" class="btn btn-primary {% if not logged_in %}disabled{% endif %}"><svg class="bi" width="16" height="16" fill="currentColor">
 							<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#reply-fill"/>
 						</svg> {{ __("Send") }}</button>
-			</div>
+			</div>{% endif %}
 			<div id="comment"></div>
 				{% for comment in comments %}
 					{{ comment(comment) }}
