--- a/templates/default/settings.twig
+++ b/templates/default/settings.twig
@@ -2,66 +2,86 @@
 
 {% block title %}{{ __("Settings") }}{% endblock %}
 
-	{% block content %}
-	<div class="row">
-	<div class="col-lg-2 col-4">
+{% block content %}
+<div class="row">
+<div class="col-lg-2 col-4">
 	<ul class="list-group">
-    <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-	<button class="nav-link active text-start" id="v-pills-account-tab" data-bs-toggle="pill" data-bs-target="#v-pills-account" type="button" role="tab" aria-controls="v-pills-account" aria-selected="false">
-	<svg class="bi" width="16" height="16" fill="currentColor"><use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#person-fill"/></svg> {{ __("Account") }}</button>
-    <button class="nav-link text-start" id="v-pills-profile-tab" data-bs-toggle="pill" data-bs-target="#v-pills-profile" type="button" role="tab" aria-controls="v-pills-profile" aria-selected="false">
-	<svg class="bi" width="16" height="16" fill="currentColor"><use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#person-lines-fill"/></svg> {{ __("Profile") }}</button>
-    <button class="nav-link text-start" id="v-pills-partner-tab" data-bs-toggle="pill" data-bs-target="#v-pills-partner" type="button" role="tab" aria-controls="v-pills-partner" aria-selected="false">
-	<svg class="bi" width="16" height="16" fill="currentColor"><use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#check2-circle"/></svg> {{ __("Partnership") }}</button>
-  </div>
-</ul>
-	</div>
-	<div class="col-lg-10 col-8">
+		<div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+			<button class="nav-link active text-start" id="v-pills-account-tab" data-bs-toggle="pill"
+				data-bs-target="#v-pills-account" type="button" role="tab" aria-controls="v-pills-account"
+				aria-selected="false">
+				<svg class="bi" width="16" height="16" fill="currentColor">
+					<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#person-fill" />
+				</svg> {{ __("Account") }}</button>
+			<button class="nav-link text-start" id="v-pills-profile-tab" data-bs-toggle="pill"
+				data-bs-target="#v-pills-profile" type="button" role="tab" aria-controls="v-pills-profile"
+				aria-selected="false">
+				<svg class="bi" width="16" height="16" fill="currentColor">
+					<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#person-lines-fill" />
+				</svg> {{ __("Profile") }}</button>
+			<button class="nav-link text-start" id="v-pills-partner-tab" data-bs-toggle="pill"
+				data-bs-target="#v-pills-partner" type="button" role="tab" aria-controls="v-pills-partner"
+				aria-selected="false">
+				<svg class="bi" width="16" height="16" fill="currentColor">
+					<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#check2-circle" />
+				</svg> {{ __("Partnership") }}</button>
+		</div>
+	</ul>
+</div>
+<div class="col-lg-10 col-8">
 	<div class="d-flex align-items-start">
-  <div class="tab-content" id="v-pills-tabContent" style="width: 100%;">
-      <div class="tab-pane fade show active" id="v-pills-account" role="tabpanel" aria-labelledby="v-pills-account-tab">
-	  <div class="p-4 bg-light border rounded-3">
-	  <div class="row">
-	  <div class="col-3">
-	  <img src="{{ profile_image(current_user.username) }}" alt="{{ current_user.username }}" class="rounded img-fluid">
-	  </div>
-	  <div class="col-9">
-	  <h2>{{ current_user.username }}</h2>
-	  <p>
-	  {% if current_user.email == "poktube_migrated@squarebracket.me" %}
-	  {{ __("Migrated from PokTube") }}
-	  {% else %}
-	  <svg class="bi" width="20" height="20" fill="currentColor"><use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#envelope"/></svg>
-	  <b>{{ __("Email address:") }}</b> {{ current_user.email }}
-	  {% endif %}
-	  </p>
-	  </div>
-	</div></div></div>
-    <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">
-		<div class="p-4 bg-light border rounded-3">
-          <h2>{{ __("Profile settings") }}</h2>
-          {{ __("Change the look of your user profile.") }}
-		  </div>
-		<br>
-		<form action="settings.php" method="post">
-			<textarea class="form-control" id="description" id="floatingInput" name="description" maxlength="500" style="overflow:hidden;resize:none" rows="3" placeholder="{{ __("Description") }}">{{ current_user.description }}</textarea>
-			<select class="form-select" name="language">
-				{% for code,name in glob_languages %}
-					{% if name %}<option value="{{ code }}" {% if code == current_user.language %}selected{% endif %}>{{ name }}</option>{% endif %}
-				{% endfor %}
-			</select>
-			<input type="color" class="form-control" id="color" name="color" value="{{ current_user.color }}">
-			<input type="hidden" name="updatesettings" value="yes">
-			<input type="submit" class="btn btn-primary" name="action" value="{{ __("Update") }}">
-		</form>
+		<div class="tab-content" id="v-pills-tabContent" style="width: 100%;">
+			<div class="tab-pane fade show active" id="v-pills-account" role="tabpanel"
+				aria-labelledby="v-pills-account-tab">
+				<div class="p-4 bg-light border rounded-3">
+					<div class="row">
+						<div class="col-3">
+							<img src="{{ profile_image(current_user.username) }}" alt="{{ current_user.username }}" class="rounded img-fluid">
+						</div>
+						<div class="col-9">
+							<h2>{{ current_user.username }}</h2>
+							<p>
+								{% if current_user.email == "poktube_migrated@squarebracket.me" %}
+								{{ __("Migrated from PokTube") }}
+								{% else %}
+								<svg class="bi" width="20" height="20" fill="currentColor">
+									<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#envelope" />
+								</svg>
+								<b>{{ __("Email address:") }}</b> {{ current_user.email }}
+								{% endif %}
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">
+				<div class="p-4 bg-light border rounded-3">
+					<h2>{{ __("Profile settings") }}</h2>
+					{{ __("Change the look of your user profile.") }}
+				</div>
+				<br>
+				<form action="settings.php" method="post">
+					<textarea class="form-control" id="description" id="floatingInput" name="description" maxlength="500" style="overflow:hidden;resize:none" rows="3" placeholder="{{ __("Description") }}">{{ current_user.description }}</textarea>
+					<select class="form-select" name="language">
+						{% for code,name in glob_languages %}
+						{% if name %}<option value="{{ code }}" {% if code==current_user.language %}selected{% endif %}>{{ name }}</option>{% endif %}
+						{% endfor %}
+					</select>
+					<input type="color" class="form-control" id="color" name="color"
+						value="{{ current_user.color }}">
+					<input type="hidden" name="updatesettings" value="yes">
+					<input type="submit" class="btn btn-primary" name="action" value="{{ __(" Update") }}">
+				</form>
+			</div>
+			<div class="tab-pane fade" id="v-pills-partner" role="tabpanel" aria-labelledby="v-pills-partner-tab">
+				<div class="h-100 p-5 bg-light border rounded-3">
+					<h2>{{ __("Partner with squareBracket") }}</h2>
+					<p>Add some text later.</p>
+					<button class="btn btn-primary" type="button">{{ __("Apply for Partner") }} (not functional)</button>
+				</div>
+			</div>
+		</div>
 	</div>
-    <div class="tab-pane fade" id="v-pills-partner" role="tabpanel" aria-labelledby="v-pills-partner-tab">
-	<div class="h-100 p-5 bg-light border rounded-3">
-          <h2>{{ __("Partner with squareBracket") }}</h2>
-          <p>Add some text later.</p>
-          <button class="btn btn-primary" type="button">{{ __("Apply for Partner") }} (not functional)</button>
-        </div>
-	</div>
-  </div>
-</div></div>
+</div>
+</div>
 	{% endblock %}
